--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -931,6 +931,23 @@ img {
   padding: .25rem .5rem .5rem 0;
 }
 
+.text-success {
+  color: rgb(27, 239, 27);
+}
+
+.text-danger {
+  color: #df5050;
+}
+
+.text-danger, .text-success, .sending-message {
+  display: none;
+}
+
+.text-danger.show, .text-success.show, .sending-message.show {
+  display: block;
+}
+
+.text-s
 /*==================== FOOTER ====================*/
 .footer {
   padding-top: 2rem;
